; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm.c___clone_and_map_simple.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm.c___clone_and_map_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clone_info = type { i32, %struct.TYPE_2__*, i64, i32, %struct.bio* }
%struct.TYPE_2__ = type { i32 }
%struct.bio = type { i64 }
%struct.dm_target = type { i32 }
%struct.dm_target_io = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clone_info*, %struct.dm_target*)* @__clone_and_map_simple to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__clone_and_map_simple(%struct.clone_info* %0, %struct.dm_target* %1) #0 {
  %3 = alloca %struct.clone_info*, align 8
  %4 = alloca %struct.dm_target*, align 8
  %5 = alloca %struct.bio*, align 8
  %6 = alloca %struct.bio*, align 8
  %7 = alloca %struct.dm_target_io*, align 8
  store %struct.clone_info* %0, %struct.clone_info** %3, align 8
  store %struct.dm_target* %1, %struct.dm_target** %4, align 8
  %8 = load %struct.clone_info*, %struct.clone_info** %3, align 8
  %9 = getelementptr inbounds %struct.clone_info, %struct.clone_info* %8, i32 0, i32 4
  %10 = load %struct.bio*, %struct.bio** %9, align 8
  store %struct.bio* %10, %struct.bio** %6, align 8
  %11 = load %struct.clone_info*, %struct.clone_info** %3, align 8
  %12 = load %struct.dm_target*, %struct.dm_target** %4, align 8
  %13 = call %struct.dm_target_io* @alloc_tio(%struct.clone_info* %11, %struct.dm_target* %12)
  store %struct.dm_target_io* %13, %struct.dm_target_io** %7, align 8
  %14 = load %struct.bio*, %struct.bio** %6, align 8
  %15 = load %struct.clone_info*, %struct.clone_info** %3, align 8
  %16 = getelementptr inbounds %struct.clone_info, %struct.clone_info* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.clone_info*, %struct.clone_info** %3, align 8
  %19 = getelementptr inbounds %struct.clone_info, %struct.clone_info* %18, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.bio*, %struct.bio** %6, align 8
  %22 = getelementptr inbounds %struct.bio, %struct.bio* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.clone_info*, %struct.clone_info** %3, align 8
  %25 = getelementptr inbounds %struct.clone_info, %struct.clone_info* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = sub nsw i64 %23, %26
  %28 = load %struct.clone_info*, %struct.clone_info** %3, align 8
  %29 = getelementptr inbounds %struct.clone_info, %struct.clone_info* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.clone_info*, %struct.clone_info** %3, align 8
  %32 = getelementptr inbounds %struct.clone_info, %struct.clone_info* %31, i32 0, i32 1
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call %struct.bio* @clone_bio(%struct.bio* %14, i32 %17, i64 %20, i64 %27, i32 %30, i32 %35)
  store %struct.bio* %36, %struct.bio** %5, align 8
  %37 = load %struct.dm_target*, %struct.dm_target** %4, align 8
  %38 = load %struct.bio*, %struct.bio** %5, align 8
  %39 = load %struct.dm_target_io*, %struct.dm_target_io** %7, align 8
  %40 = call i32 @__map_bio(%struct.dm_target* %37, %struct.bio* %38, %struct.dm_target_io* %39)
  %41 = load %struct.clone_info*, %struct.clone_info** %3, align 8
  %42 = getelementptr inbounds %struct.clone_info, %struct.clone_info* %41, i32 0, i32 0
  store i32 0, i32* %42, align 8
  ret void
}

declare dso_local %struct.dm_target_io* @alloc_tio(%struct.clone_info*, %struct.dm_target*) #1

declare dso_local %struct.bio* @clone_bio(%struct.bio*, i32, i64, i64, i32, i32) #1

declare dso_local i32 @__map_bio(%struct.dm_target*, %struct.bio*, %struct.dm_target_io*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
